--- a/UMPST/pom.xml
+++ b/UMPST/pom.xml
@@ -206,6 +206,16 @@
 <!-- 			<version>4.13.6</version> -->
 				<version>4.1.0</version>
 			</dependency>
+			<dependency>
+				<groupId>br.unb.cic</groupId>
+				<artifactId>unbbayes.gui.mebn.ontology.protege</artifactId>
+				<version>1.2.5</version>
+			</dependency>
+			<dependency>
+				<groupId>br.unb.cic</groupId>
+				<artifactId>unbbayes.prs.mebn</artifactId>
+				<version>1.14.13</version>
+			</dependency>
 			
 	</dependencies>
 	<reporting>
